--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.2.2",
+    "redux-form": "^8.3.10",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
