--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "mdb-react-ui-kit": "^7.2.0",
     "react": "^18.2.0",
     "react-animated-numbers": "^0.18.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
+    "react-scroll-trigger": "^0.6.14",
     "reactstrap": "^9.2.2",
     "redux-form": "^8.3.10",
     "styled-components": "^6.1.8",
