--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^11.11.9",
     "mdb-react-ui-kit": "^7.2.0",
     "react": "^18.2.0",
     "react-animated-numbers": "^0.18.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^6.27.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
     "react-scroll-trigger": "^0.6.14",
